--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,6 @@
     <string name="navigation_drawer_close">Close navigation drawer</string>
 
     <string name="action_settings">Settings</string>
+    <string name="title_activity_fuel_statistics">FuelStatisticsActivity</string>
+    <string name="title_activity_refill">refillActivity</string>
 </resources>
